@@ -457,18 +457,10 @@ class MimeMagic {
 		 */
 		$xml = new XmlTypeCheck( $file );
 		if( $xml->wellFormed ) {
-			$types = array(
-				'http://www.w3.org/2000/svg:svg'    		=> 'image/svg+xml',
-				'svg'                               		=> 'image/svg+xml',
-				'http://www.lysator.liu.se/~alla/dia/:diagram' 	=> 'application/x-dia-diagram',
-				'http://www.w3.org/1999/xhtml:html' 		=> 'text/html', // application/xhtml+xml?
-				'html'                              		=> 'text/html', // application/xhtml+xml?
-			);
-			if( isset( $types[$xml->rootElement] ) ) {
-				$mime = $types[$xml->rootElement];
-				return $mime;
+			global $wgXMLMimeTypes;
+			if( isset( $wgXMLMimeTypes[$xml->rootElement] ) ) {
+				return $wgXMLMimeTypes[$xml->rootElement];
 			} else {
-				/// Fixme -- this would be the place to allow additional XML type checks
 				return 'application/xml';
 			}
 		}
